# substrate-node-template

./: .gitignore
node/: Cargo.toml
node/src/: rpc.rs
pallets/github-ocw/: Cargo.toml
pallets/github-ocw/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
